fix: remove display inline block because of delayed rendering for nav subitems when using keyboard, switch from border styling to box-shadow styling to be less disruptive and cause less cumulative layer shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,14 +23,12 @@ a:focus-visible,
 button:focus-visible,
 div:focus-visible,
 span:focus-visible {
-  border: 3px inset #1565c0; /* blue */
-  display: inline-block;
+  box-shadow: 0 0 0 3px #1565c0; /* blue */
   outline: 3px outset #4caf50; /* green */
   text-decoration: underline;
 }
 
 input:focus-visible {
-  display: inline-block;
   outline: 2px outset #4caf50;
   box-shadow: 0 0 0 2px inset #1565c0;
 }
